# imageManipulatorPL1

./: CMakeLists.txt  colas.cpp  colas.h  filtros.cpp  filtros.h  funciones.cpp  funciones.h  listas.cpp  listas.h  main.cpp  menu.cpp  menu.h  nodoColas.cpp  nodoColas.h  nodoListas.cpp  nodoListas.h  nodoPilas.cpp  nodoPilas.h  pila.cpp  pila.h
outputs/: collage_final.tiff
